fixed scrollbar and layout, custom _document.js,

--- a/components/layout.module.sass
+++ b/components/layout.module.sass
@@ -3,7 +3,7 @@
   flex-direction: column
   align-items: center
   align-content: center
-  padding: 150px
+  padding: 80px 150px 210px 150px
   text-align: center
   background-color: transparent
   background-image: linear-gradient(to right, #0f4c75 , rgba(0,0,0, .75)), url('/images/luke-chesser-JKUTrJ4vK00-unsplash.jpg')
@@ -13,11 +13,3 @@
   width: 100%
   color: white
   box-shadow: 0px 5px 20px #121a1e
-
-.fixedContainer
-  position: fixed
-  top: 45px
-  width: 100%
-  overflow: auto
-  bottom: 0
-
