--- a/styles/global.sass
+++ b/styles/global.sass
@@ -1,14 +1,28 @@
 @import "custom"
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap')
-
-html,
-body
+html, body
   padding: 0
   margin: 0
   font-family: 'Inter', Helvetica, sans-serif
   line-height: 1.6
   font-size: 18px
   background-color: #1b262c
+
+html, body, #__next, #wrapper
+  height: 100%
+  margin: 0
+
+#wrapper
+  display: flex
+  flex-direction: column
+
+header
+  flex: none
+
+
+main
+  overflow-y: scroll 
+  flex: auto
 
 *
   box-sizing: border-box
@@ -30,7 +44,7 @@ img
   border-bottom: 1px solid black
   text-align: center
   align-content: start
-  
+  border: 0
 
 .navbar-toggler, .navbar-toggler:focus
   border: 0
@@ -41,8 +55,6 @@ img
 
 .nav-link
   color: white
-
-
 
 .nav-tabs
   border: 0
@@ -62,7 +74,6 @@ img
 .btn-primary:hover
   color: rgba(255,255,255,.8)
 
-
 .resume
   display: block
   height: 1200px
@@ -81,8 +92,8 @@ img
   color: white
   
 .stand-out
-  border: 1px solid rgba(255,255,255,0.5)
-  box-shadow: 0px 0px 5px rgba(255,255,255,0.5) 
+  border: 1px solid black
+  box-shadow: 0px 0px 5px black
   border-radius: 3px
 
 .blue-text-color
